syntax = "proto3";

package status;

import "google/protobuf/timestamp.proto";

option go_package = "internal/gen/status/apiv1.status";


message StatusRequest {}

message StatusReply {
    string ServiceName = 1;
    repeated StatusProbe Probes = 2;
    string Status = 3;

}

message StatusProbe {
    string Name = 1;
    bool Healthy = 2;
    string Message = 3;
    google.protobuf.Timestamp LastCheckedTS = 4;
}